CMAKE_MINIMUM_REQUIRED(VERSION 2.6.4 FATAL_ERROR)

SET_PROPERTY( GLOBAL PROPERTY USE_FOLDERS               ON )
SET_PROPERTY( GLOBAL PROPERTY PREDEFINED_TARGETS_FOLDER "CMake Targets" )

PROJECT(gwEarth)

set(GWEARTH_VERSION_MAJOR 1)
set(GWEARTH_VERSION_MINOR 0)
set(GWEARTH_PATCH_VERSION 0)
set(GWEARTH_SOVERSION     0)

SET(GWEARTH_PLUGIN_PREFIX "")

IF (CYGWIN)
    SET(GWEARTH_PLUGIN_PREFIX "cygwin_")
ENDIF()

IF(MINGW)
    SET(GWEARTH_PLUGIN_PREFIX "mingw_")
ENDIF()

SET(GWEARTH_VERSION ${GWEARTH_VERSION_MAJOR}.${GWEARTH_VERSION_MINOR}.${GWEARTH_PATCH_VERSION})

SET(GWEARTH_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR})

set(CMAKE_MODULE_PATH "${GWEARTH_SOURCE_DIR}/CMakeModules/;${CMAKE_MODULE_PATH}") 

SET(CMAKE_DEBUG_POSTFIX "d" CACHE STRING "add a postfix, usually d on windows")
SET(CMAKE_RELEASE_POSTFIX "" CACHE STRING "add a postfix, usually empty on windows")
SET(CMAKE_RELWITHDEBINFO_POSTFIX "rd" CACHE STRING "add a postfix, usually empty on windows")
SET(CMAKE_MINSIZEREL_POSTFIX "s" CACHE STRING "add a postfix, usually empty on windows")

FIND_PACKAGE(OpenGL)
FIND_PACKAGE(BOOST)
FIND_PACKAGE(OSG)
FIND_PACKAGE(ZLIB)
FIND_PACKAGE(OSGEARTH)
#FIND_PACKAGE(LIBMONGOCXX)
#FIND_PACKAGE(LIBBSONCXX)
#FIND_PACKAGE(DRACO)
#FIND_PACKAGE(ASSIMP)
#FIND_PACKAGE(CityGML)

#INCLUDE_DIRECTORIES(
#    ${GWEARTH_SOURCE_DIR}/src
#    ${OSG_INCLUDE_DIR}
#	${OSGEARTH_INCLUDE_DIR}
#)

OPTION(DYNAMIC_GWEARTH "Set to ON to build GWEARTH for dynamic linking. Use OFF for static." ON)
IF   (DYNAMIC_GWEARTH)
    SET(GWEARTH_USER_DEFINED_DYNAMIC_OR_STATIC "SHARED")
ELSE (DYNAMIC_GWEARTH)
    SET(GWEARTH_USER_DEFINED_DYNAMIC_OR_STATIC "STATIC")
ENDIF(DYNAMIC_GWEARTH)

SET(OUTPUT_BINDIR ${PROJECT_BINARY_DIR}/bin)
MAKE_DIRECTORY(${OUTPUT_BINDIR})
SET(EXECUTABLE_OUTPUT_PATH ${OUTPUT_BINDIR})

SET(OUTPUT_LIBDIR ${PROJECT_BINARY_DIR}/lib)
MAKE_DIRECTORY(${OUTPUT_LIBDIR})
SET(LIBRARY_OUTPUT_PATH ${OUTPUT_LIBDIR})

LINK_DIRECTORIES( ${LINK_DIRECTORIES} ${OUTPUT_LIBDIR} )

INCLUDE_DIRECTORIES(include ${CMAKE_INCLUDE_PATH})
LINK_DIRECTORIES(${CMAKE_LIBRARY_PATH})

INCLUDE(GWEARTHMacroUtils)

ADD_SUBDIRECTORY(Src)
#ADD_SUBDIRECTORY(gwTest)


