PROJECT(GW_EXAMPLES)

SET(TARGET_DEFAULT_LABEL_PREFIX "Example")
SET(TARGET_DEFAULT_APPLICATION_FOLDER "Example")

ADD_SUBDIRECTORY(gwTest)
ADD_SUBDIRECTORY(gwQingXie)
#ADD_SUBDIRECTORY(delaunay)
ADD_SUBDIRECTORY(modelTool)
ADD_SUBDIRECTORY(modelSimplify)
ADD_SUBDIRECTORY(generateTileConfig)
ADD_SUBDIRECTORY(voxel)
ADD_SUBDIRECTORY(voxel2)
ADD_SUBDIRECTORY(voxel3)
ADD_SUBDIRECTORY(xmlTest)
ADD_SUBDIRECTORY(modelSplit)
ADD_SUBDIRECTORY(widgetShader)
ADD_SUBDIRECTORY(modelLod)
ADD_SUBDIRECTORY(multyWayTreeTest)
ADD_SUBDIRECTORY(tiledModelTool)
#ADD_SUBDIRECTORY(kdTreeTest)
#ADD_SUBDIRECTORY(tessellate)
#ADD_SUBDIRECTORY(linesegmentIntersectTest)
#ADD_SUBDIRECTORY(toMongo)
#ADD_SUBDIRECTORY(PlaneIntersectTest)